[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "madstation"
version = "0.1.0"
description = "MadStation simulation server"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
  "websockets>=12.0",
  "pydantic>=2.7.0",
]

[tool.setuptools.packages.find]
include = ["madstation*"]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]
